--- a/app/scripts/templates/panelbar.html
+++ b/app/scripts/templates/panelbar.html
@@ -3,8 +3,9 @@
     <div class="toolbar__slot">
       <div class="t-item"
            ng-class="{'t-item--highlighted': item.isHighlighted}">
-        <button ng-click="onItemClick(menu, item)"
-                ng-mouseenter="onItemHover(menu, item)">
+        <button ng-click="onRootItemClick(menu, item)"
+                ng-mouseenter="onRootItemHover(menu, item)"
+                ng-mouseleave="onRootItemLeave(menu, item)">
           <div class="l-list-inline l-list-inline--x-small">
             <div class="l-list-inline__item is-middle-aligned">
               <div class="t-item__icon"
