--- a/app/scripts/templates/tweetList.html
+++ b/app/scripts/templates/tweetList.html
@@ -1,11 +1,11 @@
 <div class="tweet-list">
   <div class="l-block"
-       ng-show="filters.activeCommand">
+       ng-show="activeItem">
     <div class="tweet-list__header">
       <div class="l-split">
         <div class="l-split__right">
           <button class="tweet-list__back"
-                  ng-click="resetActiveCommand()">back to all tweets</button>
+                  ng-click="onItemReset()">back to all tweets</button>
         </div>
 
         <div class="l-split__left">
@@ -13,19 +13,19 @@
         </div>
       </div>
 
-      <div class="tweet-list__title">{{filters.activeCommand.label}}</div>
+      <div class="tweet-list__title">{{activeItem.label}}</div>
 
-      <button ng-mouseenter="highlight()"
-              ng-mouseleave="removeHighlights()"
-              ng-click="revealCommandLocation($event)">
+      <button ng-mouseenter="hoverCommandCallback(activeMenu.name, activeItem.id)"
+              ng-mouseleave="hoverEndCommandCallback(activeMenu.name)"
+              ng-click="onItemClick(activeMenu, activeItem, $event)">
         <div class="l-list-inline l-list-inline--collapsed">
           <div class="l-list-inline__item">
             <div class="tweet-list__path">
-              {{filters.activeCommandLocation.name}} /&nbsp;
+              {{activeMenu.name}} /&nbsp;
             </div>
           </div><!--
           --><div class="l-list-inline__item"
-               ng-repeat="parent in filters.activeCommand.parents"
+               ng-repeat="parent in activeItem.parents"
                ng-show="parent.label && parent.label != ''">
             <div class="tweet-list__path">
               {{parent.label}} /&nbsp;
@@ -33,7 +33,7 @@
           </div><!--
           --><div class="l-list-inline__item">
             <div class="tweet-list__path">
-              {{filters.activeCommand.label}}
+              {{activeItem.label}}
             </div>
           </div>
         </div>
@@ -41,12 +41,14 @@
     </div>
   </div>
 
-  <tweet ng-repeat="t in tweets.all | limitTo: tweets.showItems | filter: hasActiveCommand"
-         ng-click="activate(t)"
+  <tweet ng-repeat="t in tweets.all | limitTo: tweets.showItems"
+         ng-click="onTweetActivate(t, $event)"
          class="tweet"
          ng-class="{'tweet--is-first': $first,
                     'tweet--is-last':  $last,
-                    'tweet--is-open': t.id == activeId}"
+                    'tweet--is-open': t.id == activeTweetId}"
          data="t"
-         active="activeId"></tweet>
+         active-tweet-id="activeTweetId"
+         on-command-hover="hoverCommandCallback"
+         on-command-hover-end="hoverEndCommandCallback"></tweet>
 </div>
