--- a/app/scripts/templates/menu.html
+++ b/app/scripts/templates/menu.html
@@ -3,15 +3,15 @@
   <div class="md-item"
        ng-class="{'md-item--highlighted': item.isHighlighted,
                   'md-item--parent': item.children.length}"
-       ng-mouseenter="onItemHover(menu, item)"
-       ng-mouseleave="onItemLeave(item)">
+       ng-mouseenter="itemHoverCallback(menu, item)"
+       ng-mouseleave="itemLeaveCallback(item)">
 
     <div class="md-item__counter"
          ng-show="item.tweetsCount > 0">{{item.tweetsCount}}
     </div>
 
     <button class="md-item__name"
-            ng-click="onItemActivate(menu, item, $event)">{{item.label}}
+            ng-click="itemActivateCallback(menu, item, $event)">{{item.label}}
     </button>
   </div>
 
@@ -37,9 +37,9 @@
       <div class="menu__slot">
         <div class="m-item"
              ng-class="{'m-item--highlighted': rootItem.isHighlighted}"
-             ng-mouseenter="onRootItemHover(menu, rootItem)"
-             ng-mouseleave="onRootItemLeave(menu, rootItem)"
-             ng-click="onRootItemClick(menu, rootItem)">
+             ng-mouseenter="rootItemHoverCallback(menu, rootItem)"
+             ng-mouseleave="rootItemLeaveCallback(menu, rootItem)"
+             ng-click="rootItemClickCallback(menu, rootItem)">
           <button class="m-item__name">{{rootItem.label}}</button>
 
           <div class="m-item__counter"
