--- a/app/scripts/templates/toolbar.html
+++ b/app/scripts/templates/toolbar.html
@@ -3,15 +3,15 @@
     <div class="toolbar__slot"
          ng-if="!item.divider">
       <div class="t-item"
-           ng-click="onRootItemClick(menu, item)"
-           ng-mouseenter="onRootItemHover(menu, item)"
-           ng-mouseleave="onRootItemLeave(menu, item)"
+           ng-click="rootItemClickCallback(menu, item)"
+           ng-mouseenter="rootItemHoverCallback(menu, item)"
+           ng-mouseleave="rootItemLeaveCallback(menu, item)"
            ng-class="{'t-item--highlighted': item.isHighlighted}">
 
         <button class="t-item__icon"
                 ng-class="{'t-item__icon--large': item.largeIcon}"
                 style="background-image: url('/images/{{item.id}}.png');"
-                ng-click="onItemActivate(menu, item, $event)">
+                ng-click="itemActivateCallback(menu, item, $event)">
         </button>
 
         <div class="t-item__counter"
@@ -24,11 +24,11 @@
         <div class="t-dropdown__slot"
              ng-repeat="subitem in item.children">
           <div class="td-item"
-               ng-mouseenter="onItemHover(menu, subitem)"
-               ng-mouseleave="onItemLeave(subitem)"
+               ng-mouseenter="itemHoverCallback(menu, subitem)"
+               ng-mouseleave="itemLeaveCallback(subitem)"
                ng-class="{'td-item--first': $first,
                           'td-item--highlighted': subitem.isHighlighted}">
-            <button ng-click="onItemActivate(menu, subitem, $event)">
+            <button ng-click="itemActivateCallback(menu, subitem, $event)">
               <div class="l-list-inline l-list-inline--x-small">
                 <div class="l-list-inline__item is-middle-aligned">
                   <div class="td-item__icon"
