kinda fixed highlighting/opening commands from tweets

--- a/app/scripts/templates/tweet.html
+++ b/app/scripts/templates/tweet.html
@@ -54,7 +54,7 @@
           <div class="command"
                ng-repeat="item in tweet.menu | limitTo: data.id === activeTweetId ? tweet.menu.length : 2"
                ng-mouseenter="commandHover('menu', item.id)"
-               ng-mouseleave="commandHoverEnd('menu')"
+               ng-mouseleave="commandHoverEnd('menu', item.id)"
                ng-click="commandClick('menu', item.id, $event)">{{item.label | characters:25}}</div>
 
           <div class="command"
@@ -65,9 +65,9 @@
           <div class="commands-header">Panels:</div>
 
           <div class="command"
-               ng-repeat="item in tweet.panels | limitTo: data.id === activeTweetId ? tweet.panels.length : 2"
+               ng-repeat="item in tweet.panelbar | limitTo: data.id === activeTweetId ? tweet.panels.length : 2"
                ng-mouseenter="commandHover('panelbar', item.id)"
-               ng-mouseleave="commandHoverEnd('panelbar')"
+               ng-mouseleave="commandHoverEnd('panelbar', item.id)"
                ng-click="commandClick('panelbar', item.id, $event)">{{item.label | characters:25}}</div>
 
           <div class="command"
@@ -78,9 +78,9 @@
           <div class="commands-header">Tools:</div>
 
           <div class="command"
-               ng-repeat="item in tweet.tools| limitTo: data.id === activeTweetId ? tweet.tools.length : 2"
+               ng-repeat="item in tweet.toolbar | limitTo: data.id === activeTweetId ? tweet.tools.length : 2"
                ng-mouseenter="commandHover('toolbar', item.id)"
-               ng-mouseleave="commandHoverEnd('toolbar')"
+               ng-mouseleave="commandHoverEnd('toolbar', item.id)"
                ng-click="commandClick('toolbar', item.id, $event)">{{item.label | characters:25}}</div>
 
           <div class="command"
