--- a/app/scripts/templates/toolbar.html
+++ b/app/scripts/templates/toolbar.html
@@ -44,7 +44,7 @@
             </button>
 
             <div class="td-item__counter"
-                 ng-show="item.tweetsCount > 0">{{item.tweetsCount}}</div>
+                 ng-show="subitem.tweetsCount > 0">{{subitem.tweetsCount}}</div>
           </div>
         </div>
       </div>
