--- a/app/sass/modules/_tweet-list.scss
+++ b/app/sass/modules/_tweet-list.scss
@@ -1,6 +1,10 @@
 $t-color: #292f33;
 $t-border: 1px solid #e1e8ed;
 
+.tweet-list-wrapper {
+  height: 100%;
+}
+
 .tweet-list {
   padding: 50px 0;
 
