--- a/app/scripts/templates/tweetList.html
+++ b/app/scripts/templates/tweetList.html
@@ -9,7 +9,7 @@
         </div>
 
         <div class="l-split__left">
-          <div class="tweet-list__subtitle">Tweets about</div>
+          <div class="tweet-list__subtitle">Tweets that mention</div>
         </div>
       </div>
 
