added timeline filtering

--- a/app/scripts/templates/menu.html
+++ b/app/scripts/templates/menu.html
@@ -30,7 +30,7 @@
   </div>
 </script>
 
-<div class="menu js-menu">
+<div class="menu js-menu js-top-menu">
   <ul class="l-list-inline l-list-inline--collapsed">
     <li class="l-list-inline__item"
         ng-repeat="rootItem in menu.all">
