--- a/app/scripts/templates/panelbar.html
+++ b/app/scripts/templates/panelbar.html
@@ -1,4 +1,4 @@
-<div class="toolbar toolbar--right js-menu">
+<div class="toolbar toolbar--right js-menu js-panelbar">
   <div ng-repeat="item in menu.all">
     <div class="toolbar__slot">
       <div class="t-item"
