--- a/app/scripts/templates/toolbar.html
+++ b/app/scripts/templates/toolbar.html
@@ -1,4 +1,4 @@
-<div class="toolbar toolbar--left js-menu">
+<div class="toolbar toolbar--left js-menu js-toolbar">
   <div ng-repeat="item in menu.all">
     <div class="toolbar__slot"
          ng-if="!item.divider">
