--- a/app/scripts/templates/tweet.html
+++ b/app/scripts/templates/tweet.html
@@ -53,45 +53,45 @@
           <div class="commands-header">Menu items:</div>
 
           <div class="command"
-               ng-repeat="item in tweet.menu | limitTo: data.id === activeTweetId ? tweet.menu.length : 2"
+               ng-repeat="item in tweet.menu | limitTo: data.id === filters.activeTweetId ? tweet.menu.length : 2"
                ng-mouseenter="commandHover('menu', item.id)"
                ng-mouseleave="commandHoverEnd('menu', item.id)"
                ng-click="commandClick('menu', item.id, $event)">{{item.label | characters:25}}</div>
 
           <div class="command"
-               ng-show="data.id !== activeTweetId && tweet.menu.length > 2">...</div>
+               ng-show="data.id !== filters.activeTweetId && tweet.menu.length > 2">...</div>
         </div>
 
         <div class="commands-table__cell commands-table__cell--pre-border">
           <div class="commands-header">Panels:</div>
 
           <div class="command"
-               ng-repeat="item in tweet.panelbar | limitTo: data.id === activeTweetId ? tweet.panelbar.length : 2"
+               ng-repeat="item in tweet.panelbar | limitTo: data.id === filters.activeTweetId ? tweet.panelbar.length : 2"
                ng-mouseenter="commandHover('panelbar', item.id)"
                ng-mouseleave="commandHoverEnd('panelbar', item.id)"
                ng-click="commandClick('panelbar', item.id, $event)">{{item.label | characters:25}}</div>
 
           <div class="command"
-               ng-show="data.id !== activeTweetId && tweet.panelbar.length > 2">...</div>
+               ng-show="data.id !== filters.activeTweetId && tweet.panelbar.length > 2">...</div>
         </div>
 
         <div class="commands-table__cell commands-table__cell--pre-border">
           <div class="commands-header">Tools:</div>
 
           <div class="command"
-               ng-repeat="item in tweet.toolbar | limitTo: data.id === activeTweetId ? tweet.toolbar.length : 2"
+               ng-repeat="item in tweet.toolbar | limitTo: data.id === filters.activeTweetId ? tweet.toolbar.length : 2"
                ng-mouseenter="commandHover('toolbar', item.id)"
                ng-mouseleave="commandHoverEnd('toolbar', item.id)"
                ng-click="commandClick('toolbar', item.id, $event)">{{item.label | characters:25}}</div>
 
           <div class="command"
-               ng-show="data.id !== activeTweetId && tweet.toolbar.length > 2">...</div>
+               ng-show="data.id !== filters.activeTweetId && tweet.toolbar.length > 2">...</div>
         </div>
       </div>
     </div>
 
     <div class="l-block-small"
-         ng-show="data.id == activeTweetId">
+         ng-show="data.id == filters.activeTweetId">
       <div class="t-share-table">
         <div class="l-list-inline l-list-inline--collapsed">
           <div class="l-list-inline__item">
@@ -131,7 +131,7 @@
     </div>
 
     <div class="l-block-small"
-         ng-show="data.id == activeTweetId">
+         ng-show="data.id == filters.activeTweetId">
       <div class="tweet__extra">
         {{tweet.createdAt | amDateFormat:'h:mm A - D MMM YYYY'}}
       </div>
@@ -142,14 +142,14 @@
         <div class="l-list-inline__item">
           <div class="tweet__action">
             <i class="icon t-icon-retweet"></i>
-            <span ng-show="data.id != activeTweetId">{{tweet.retweetedBy.length}}</span>
+            <span ng-show="data.id != filters.activeTweetId">{{tweet.retweetedBy.length}}</span>
           </div>
         </div>
 
         <div class="l-list-inline__item">
           <div class="tweet__action">
             <i class="icon t-icon-favorite"></i>
-            <span ng-show="data.id != activeTweetId">{{tweet.favoriteCount}}</span>
+            <span ng-show="data.id != filters.activeTweetId">{{tweet.favoriteCount}}</span>
           </div>
         </div>
       </div>
