--- a/app/scripts/templates/tweetList.html
+++ b/app/scripts/templates/tweetList.html
@@ -1,11 +1,11 @@
 <div class="tweet-list">
   <div class="l-block"
-       ng-show="activeItem">
+       ng-show="filters.selectedCommand">
     <div class="tweet-list__header">
       <div class="l-split">
         <div class="l-split__right">
           <button class="tweet-list__back"
-                  ng-click="deactivateCallback()">back to all tweets</button>
+                  ng-click="resetCommandFilter()">back to all tweets</button>
         </div>
 
         <div class="l-split__left">
@@ -13,19 +13,19 @@
         </div>
       </div>
 
-      <div class="tweet-list__title">{{activeItem.label}}</div>
+      <div class="tweet-list__title">{{filters.selectedCommand.label}}</div>
 
-      <button ng-mouseenter="highlightCommand(activeMenu.name, activeItem.id)"
-              ng-mouseleave="dimCommand(activeMenu.name, activeItem.id)"
-              ng-click="revealCommandLocation(activeMenu.name, activeItem.id, $event)">
+      <button ng-mouseenter="highlightCommand(filters.selectedMenu.name, filters.selectedCommand.id)"
+              ng-mouseleave="dimCommand(filters.selectedMenu.name, filters.selectedCommand.id)"
+              ng-click="revealCommandLocation(filters.selectedMenu.name, filters.selectedCommand.id, $event)">
         <div class="l-list-inline l-list-inline--collapsed">
           <div class="l-list-inline__item">
             <div class="tweet-list__path">
-              {{activeMenu.name}} /&nbsp;
+              {{filters.selectedMenu.name}} /&nbsp;
             </div>
           </div><!--
           --><div class="l-list-inline__item"
-               ng-repeat="parent in activeItem.parents"
+               ng-repeat="parent in filters.selectedCommand.parents"
                ng-show="parent.label && parent.label != ''">
             <div class="tweet-list__path">
               {{parent.label}} /&nbsp;
@@ -33,7 +33,7 @@
           </div><!--
           --><div class="l-list-inline__item">
             <div class="tweet-list__path">
-              {{activeItem.label}}
+              {{filters.selectedCommand.label}}
             </div>
           </div>
         </div>
@@ -41,14 +41,13 @@
     </div>
   </div>
 
-  <tweet ng-repeat="t in tweets.filtered | limitTo: tweets.showItems"
-         ng-click="activateTweet(t, $event)"
-         class="tweet"
+  <tweet ng-repeat="t in tweets.filtered"
+         ng-click="activateTweet(t)"
+         class="tweet js-tweet"
          ng-class="{'tweet--is-first': $first,
                     'tweet--is-last':  $last,
-                    'tweet--is-open': t.id == activeTweetId}"
+                    'tweet--is-open': t.id == filters.activeTweetId}"
          data="t"
-         active-tweet-id="activeTweetId"
          command-hover-callback="highlightCommand"
          command-leave-callback="dimCommand"
          command-click-callback="revealCommandLocation"></tweet>
