--- a/app/sass/modules/_toolbar.scss
+++ b/app/sass/modules/_toolbar.scss
@@ -28,6 +28,14 @@
 
 .t-item {
   position: relative;
+  display: block;
+  width: 100%;
+
+  text-align: left;
+
+  &:focus {
+    outline: none !important;
+  }
 
   &__icon {
     display: block;
@@ -104,9 +112,17 @@
 
 .td-item {
   position: relative;
+  display: block;
+  width: 100%;
   padding-left: 20px;
   padding-right: $global-baseline*2;
 
+  &:focus {
+    outline: none !important;
+  }
+
+  text-align: left;
+  
   white-space: nowrap;
 
   &__icon {
