--- a/app/scripts/templates/panelbar.html
+++ b/app/scripts/templates/panelbar.html
@@ -1,27 +1,26 @@
 <div class="toolbar toolbar--right js-menu js-panelbar">
   <div ng-repeat="item in menu.all">
     <div class="toolbar__slot">
-      <div class="t-item"
-           ng-class="{'t-item--highlighted': item.isHighlighted}">
-        <button ng-click="rootItemClickCallback(menu, item)"
-                ng-mouseenter="rootItemHoverCallback(menu, item)"
-                ng-mouseleave="rootItemLeaveCallback(menu, item)">
-          <div class="l-list-inline l-list-inline--x-small">
-            <div class="l-list-inline__item is-middle-aligned">
-              <div class="t-item__icon"
-                   style="background-image: url('/images/{{item.id}}.png');">
-              </div>
-            </div>
-
-            <div class="l-list-inline__item is-middle-aligned">
-              <div class="t-item__label">{{item.label}}</div>
+      <button class="t-item"
+              ng-class="{'t-item--highlighted': item.isHighlighted}"
+              ng-click="rootItemClickCallback(menu, item)"
+              ng-mouseenter="rootItemHoverCallback(menu, item)"
+              ng-mouseleave="rootItemLeaveCallback(menu, item)">
+        <div class="l-list-inline l-list-inline--x-small">
+          <div class="l-list-inline__item is-middle-aligned">
+            <div class="t-item__icon"
+                 style="background-image: url('/images/{{item.id}}.png');">
             </div>
           </div>
-        </button>
+
+          <div class="l-list-inline__item is-middle-aligned">
+            <div class="t-item__label">{{item.label}}</div>
+          </div>
+        </div>
 
         <div class="t-item__counter t-item__counter--rev"
              ng-show="item.tweetsCount > 0">{{item.tweetsCount}}</div>
-      </div>
+      </button>
 
       <div class="t-dropdown t-dropdown--rev"
            ng-show="item.isOpen">
