--- a/app/scripts/templates/toolbar.html
+++ b/app/scripts/templates/toolbar.html
@@ -23,29 +23,28 @@
            ng-if="item.children.length">
         <div class="t-dropdown__slot"
              ng-repeat="subitem in item.children">
-          <div class="td-item"
-               ng-mouseenter="itemHoverCallback(menu, subitem)"
-               ng-mouseleave="itemLeaveCallback(subitem)"
-               ng-class="{'td-item--first': $first,
-                          'td-item--highlighted': subitem.isHighlighted}">
-            <button ng-click="itemActivateCallback(menu, subitem, $event)">
-              <div class="l-list-inline l-list-inline--x-small">
-                <div class="l-list-inline__item is-middle-aligned">
-                  <div class="td-item__icon"
-                       ng-class="{'td-item__icon--large': subitem.largeIcon}"
-                       style="background-image:
-                       url('/images/{{subitem.id}}.png');"></div>
-                </div>
-
-                <div class="l-list-inline__item is-middle-aligned">
-                  <div class="td-item__label">{{subitem.label}}</div>
-                </div>
+          <button class="td-item"
+                  ng-mouseenter="itemHoverCallback(menu, subitem)"
+                  ng-mouseleave="itemLeaveCallback(subitem)"
+                  ng-class="{'td-item--first': $first,
+                        'td-item--highlighted': subitem.isHighlighted}"
+                  ng-click="itemActivateCallback(menu, subitem, $event)">
+            <div class="l-list-inline l-list-inline--x-small">
+              <div class="l-list-inline__item is-middle-aligned">
+                <div class="td-item__icon"
+                     ng-class="{'td-item__icon--large': subitem.largeIcon}"
+                     style="background-image:
+                     url('/images/{{subitem.id}}.png');"></div>
               </div>
-            </button>
+
+              <div class="l-list-inline__item is-middle-aligned">
+                <div class="td-item__label">{{subitem.label}}</div>
+              </div>
+            </div>
 
             <div class="td-item__counter"
                  ng-show="subitem.tweetsCount > 0">{{subitem.tweetsCount}}</div>
-          </div>
+          </button>
         </div>
       </div>
     </div>
