--- a/app/sass/configs/_variables.scss
+++ b/app/sass/configs/_variables.scss
@@ -33,6 +33,10 @@
 // layout
   $max-width: 1200px;
 
+// environment
+//  $prefix: '/switter'; // production
+  $prefix: ''; // development
+
 /*
  * RESPONSIVE
  *
