--- a/app/scripts/templates/panelbar.html
+++ b/app/scripts/templates/panelbar.html
@@ -9,7 +9,7 @@
         <div class="l-list-inline l-list-inline--x-small">
           <div class="l-list-inline__item is-middle-aligned">
             <div class="t-item__icon"
-                 style="background-image: url('/images/{{item.id}}.png');">
+                 style="background-image: url('{{rootPrefix + '/images/' + item.id}}.png');">
             </div>
           </div>
 
