--- a/app/scripts/templates/toolbar.html
+++ b/app/scripts/templates/toolbar.html
@@ -34,7 +34,7 @@
                 <div class="td-item__icon"
                      ng-class="{'td-item__icon--large': subitem.largeIcon}"
                      style="background-image:
-                     url('/images/{{subitem.id}}.png');"></div>
+                     url('{{rootPrefix + '/images/' + item.id}}.png');"></div>
               </div>
 
               <div class="l-list-inline__item is-middle-aligned">
