more tweaks for deployment

--- a/app/sass/configs/_variables.scss
+++ b/app/sass/configs/_variables.scss
@@ -34,8 +34,8 @@
   $max-width: 1200px;
 
 // environment
-//  $prefix: '/switter'; // production
-  $prefix: ''; // development
+  $prefix: '/switter'; // production
+  //$prefix: ''; // development
 
 /*
  * RESPONSIVE
