--- a/app/sass/modules/_tweet.scss
+++ b/app/sass/modules/_tweet.scss
@@ -72,7 +72,10 @@ $t-border: 1px solid #e1e8ed;
   }
 
   &__preview-image {
-    // ...
+    display: block;
+    max-width: 100%;
+    margin: 0 auto;
+    border-radius: 6px;
   }
 
   &__extra {
@@ -90,6 +93,17 @@ $t-border: 1px solid #e1e8ed;
   &__action {
     font-size: 12px;
     font-weight: bold;
+  }
+
+  &__text {
+    a {
+      color: #1F98C7;
+      text-decoration: underline;
+
+      &:hover {
+        text-decoration: none;
+      }
+    }
   }
 }
   .tweet--is-last {
