fixed logging messages and added timeline logging

--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -95,6 +95,10 @@ $timeline-width: 150px;
     stroke: rgba($color-border, 0.5);
     shape-rendering: crispEdges;
   }
+
+  .background {
+    display: none;
+  }
 }
 
 .admin-panel {
